syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.Product";
option java_outer_classname = "ProductDataProto";

message DashboardRequest {
  repeated string productId = 1;
}

message Product {
  string productId = 1;
  string categoryId = 2;
  string name = 3;
  string productDetails = 4;
  double price = 5;
  string image = 6;
}

message Category {
  string categoryId = 1;
  string categoryName = 2;
  int64 count = 3;
}

message DashboardDetails {
  repeated Product featuredProducts = 1;
  repeated Product recentlyViewedProducts = 2;
  repeated Product similarProducts = 3;
  repeated Category categories = 4;
}

message DashboardResponse {
  DashboardDetails dashboardDetails = 1;
}

message ProductDataRequest {
  string productId = 1;
}

message ProductDataResponse {
  Product product = 1;
  repeated Product products = 2;
}

message FilterProductRequest {
  string categoryId = 1;
  string filter = 2;
  string userId = 3;
}

// Response containing filtered products
message FilterProductResponse {
  repeated Product products = 1;
}
message GetCartProductDetailsRequest {
  repeated string productIds = 1;
}

message GetCartProductDetailsResponse {
  repeated Product cartProducts = 1;
}

message CartItemDetails {
  string productName = 1;
  double price = 2;
  string categoryId = 3;
}

service ProductDataService {
  rpc fetchProductDashboard(DashboardRequest) returns (DashboardResponse);
  rpc fetchProductDetails(ProductDataRequest) returns (ProductDataResponse);
  rpc fetchFilteredProducts(FilterProductRequest) returns (FilterProductResponse);
  rpc getCartProductDetails(GetCartProductDetailsRequest) returns (GetCartProductDetailsResponse);
}
